[gd_scene load_steps=3 format=3 uid="uid://djb2iimb3bxl6"]

[ext_resource type="Script" path="res://Scripts/game_ui_labels.gd" id="1_oyhsu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_play_label"]
bg_color = Color(0.909804, 0.439216, 0.137255, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.976471, 0.580392, 0.258824, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 4

[node name="GameUILabels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oyhsu")

[node name="PlayLabelPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -300.0
offset_top = 50.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_play_label")

[node name="PlayLabel" type="Label" parent="PlayLabelPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurnLabelPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_play_label")

[node name="TurnLabel" type="Label" parent="TurnLabelPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1
